# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

module_output_path = "udmf/ndkimpl"

###############################################################################
config("module_private_config") {
  include_dirs = [
    "${udmf_interfaces_path}/ndk/data",
    "${udmf_interfaces_path}/innerkits/data",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_framework_path}/common",
    "${udmf_framework_path}/ndkimpl/data",
  ]
}

common_deps = [
  "${udmf_interfaces_path}/innerkits:udmf_client",
  "${udmf_interfaces_path}/innerkits:utd_client",
  "${udmf_interfaces_path}/ndk:libudmf",
]

common_external_deps = [
  "ability_base:want",
  "access_token:libaccesstoken_sdk",
  "access_token:libnativetoken",
  "access_token:libtoken_setproc",
  "c_utils:utils",
  "image_framework:image",
  "image_framework:image_native",
  "image_framework:pixelmap",
  "samgr:samgr_proxy",
]

ohos_unittest("UtdTest") {
  module_out_path = module_output_path

  sources = [ "utd_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps
}

ohos_unittest("UdsTest") {
  module_out_path = module_output_path

  sources = [ "uds_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps
}

ohos_unittest("UdmfTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/application_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/audio.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/folder.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/html.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/image.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/link.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/plain_text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_appitem.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_form.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_pixelmap.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "udmf_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps
}

ohos_unittest("DataProviderImplTest") {
  module_out_path = module_output_path

  sources = [ "data_provider_impl_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [
    ":DataProviderImplTest",
    ":UdmfTest",
    ":UdsTest",
    ":UtdTest",
  ]
}
###############################################################################
