# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

module_output_path = "udmf/innerkitsImpl"

###############################################################################
config("module_private_config") {
  include_dirs = [
    "${udmf_interfaces_path}/innerkits/client",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_interfaces_path}/innerkits/data",
    "${udmf_interfaces_path}/innerkits/convert",
    "${udmf_interfaces_path}/ndk/data",
    "${udmf_framework_path}/common",
    "${udmf_framework_path}/innerkitsimpl/data",
    "${udmf_framework_path}/innerkitsimpl/client/",
    "${udmf_framework_path}/innerkitsimpl/test/unittest/mock/include",
    "${udmf_framework_path}/ndkimpl/data",
  ]
}

common_deps = [
  "${udmf_interfaces_path}/innerkits:udmf_client",
  "${udmf_interfaces_path}/innerkits:utd_client",
  "${udmf_interfaces_path}/ndk:libudmf",
]

common_external_deps = [
  "ability_base:base",
  "ability_base:want",
  "access_token:libaccesstoken_sdk",
  "access_token:libnativetoken",
  "access_token:libtoken_setproc",
  "bundle_framework:appexecfwk_core",
  "c_utils:utils",
  "ffmpeg:libohosffmpeg",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "hitrace:hitrace_meter",
  "hitrace:libhitracechain",
  "image_framework:image",
  "image_framework:image",
  "image_framework:image_native",
  "image_framework:pixelmap",
  "ipc:ipc_core",
  "kv_store:distributeddata_inner",
  "kv_store:distributeddata_mgr",
  "libexif:libexif",
  "samgr:samgr_proxy",
]

ohos_unittest("UdmfClientTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/common/graph.cpp",
    "${udmf_framework_path}/common/udmf_utils.cpp",
    "${udmf_framework_path}/innerkitsimpl/client/udmf_client.cpp",
    "${udmf_framework_path}/innerkitsimpl/convert/udmf_conversion.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/application_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/audio.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/folder.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/html.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/image.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/link.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/plain_text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_appitem.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_form.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_pixelmap.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_data.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/service/udmf_service_client.cpp",
    "${udmf_framework_path}/innerkitsimpl/service/udmf_service_proxy.cpp",
    "udmf_client_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("UdmfClientSystemHapTest") {
  module_out_path = module_output_path

  sources = [ "udmf_client_system_hap_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps
}

ohos_unittest("UdmfClientHapPermissionTest") {
  module_out_path = module_output_path

  sources = [ "udmf_client_hap_permission_test.cpp" ]

  include_dirs = [
    "${udmf_interfaces_path}/innerkits/client",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_interfaces_path}/innerkits/data",
    "${udmf_interfaces_path}/innerkits/convert",
    "${udmf_framework_path}/common",
    "${udmf_framework_path}/innerkits/service",
    "${udmf_framework_path}/innerkitsimpl/client/",
    "${udmf_framework_path}/innerkitsimpl/test/unittest/mock/include",
  ]

  deps = common_deps

  external_deps = common_external_deps
}

ohos_unittest("UdmfClientSaInvokeTest") {
  module_out_path = module_output_path

  sources = [ "udmf_client_sa_invoke_test.cpp" ]

  deps = [ "${udmf_interfaces_path}/innerkits:udmf_client" ]

  external_deps = common_external_deps
}

ohos_unittest("UdmfAsyncClientTest") {
  module_out_path = module_output_path

  sources = [ "udmf_async_client_test.cpp" ]

  deps = common_deps

  external_deps = common_external_deps
}

ohos_unittest("UtdClientTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/common/base32_utils.cpp",
    "${udmf_framework_path}/common/custom_utd_json_parser.cpp",
    "${udmf_framework_path}/common/custom_utd_store.cpp",
    "${udmf_framework_path}/common/graph.cpp",
    "${udmf_framework_path}/common/udmf_utils.cpp",
    "${udmf_framework_path}/common/utd_cfgs_checker.cpp",
    "${udmf_framework_path}/common/utd_graph.cpp",
    "${udmf_framework_path}/innerkitsimpl/client/utd_client.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/flexible_type.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/preset_type_descriptors.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/type_descriptor.cpp",
    "custom_utd_json_parser_test.cpp",
    "custom_utd_store_test.cpp",
    "graph_test.cpp",
    "utd_client_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps
  external_deps += [
    "cJSON:cjson",
    "os_account:os_account_innerkits",
  ]

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("NdkDataConversionTest") {
  module_out_path = module_output_path

  sources = [ "ndk_data_conversion_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps
}

ohos_unittest("ApplicationDefineRecordTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/application_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "application_defined_record_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("AudioTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/audio.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "audio_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("FileDataTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "file_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("FlexibleTypeTest") {
  module_out_path = module_output_path

  sources = [ "flexible_type_test.cpp" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("FolderTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/folder.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "folder_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("HtmlTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/html.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "html_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("ImageTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/image.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "image_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("LinkTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/link.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "link_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("PlainTextTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/plain_text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "plain_text_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("SystemDefinedAppitemTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_appitem.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "system_defined_appitem_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("SystemDefinedFormTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_form.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "system_defined_form_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("SystemDefinedPixelMapTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_pixelmap.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "system_defined_pixelmap_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("SystemDefinedRecordTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "system_defined_record_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("TextTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "text_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("UnifiedDataTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/unified_data.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "unified_data_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("UnifiedDataHelperTest") {
  module_out_path = module_output_path

  sources = [ "unified_data_helper_test.cpp" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("UnifiedRecordTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "unified_record_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("VideoTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "video_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("UnifiedMetaTest") {
  module_out_path = module_output_path

  sources = [ "unified_meta_test.cpp" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

ohos_unittest("UdmfClientAbnormalTest") {
  module_out_path = module_output_path

  sources = [
    "${udmf_framework_path}/common/endian_converter.cpp",
    "${udmf_framework_path}/common/tlv_util.cpp",
    "${udmf_framework_path}/common/udmf_radar_reporter.cpp",
    "${udmf_framework_path}/common/udmf_types_util.cpp",
    "${udmf_framework_path}/common/udmf_utils.cpp",
    "${udmf_framework_path}/innerkitsimpl/client/udmf_client.cpp",
    "${udmf_framework_path}/innerkitsimpl/common/unified_key.cpp",
    "${udmf_framework_path}/innerkitsimpl/common/unified_meta.cpp",
    "${udmf_framework_path}/innerkitsimpl/convert/udmf_conversion.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/application_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/audio.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/folder.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/html.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/image.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/link.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/plain_text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_appitem.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_form.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_data.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/video.cpp",
    "${udmf_framework_path}/innerkitsimpl/service/udmf_service_proxy.cpp",
    "${udmf_framework_path}/innerkitsimpl/test/unittest/mock/system_defined_pixelmap_mock.cpp",
    "${udmf_framework_path}/innerkitsimpl/test/unittest/mock/tlv_object_mock.cpp",
    "${udmf_framework_path}/innerkitsimpl/test/unittest/mock/udmf_service_client_mock.cpp",
    "udmf_client_abnormal_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${udmf_interfaces_path}/innerkits:utd_client",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [
    ":ApplicationDefineRecordTest",
    ":AudioTest",
    ":FileDataTest",
    ":FlexibleTypeTest",
    ":FolderTest",
    ":HtmlTest",
    ":ImageTest",
    ":LinkTest",
    ":NdkDataConversionTest",
    ":PlainTextTest",
    ":SystemDefinedAppitemTest",
    ":SystemDefinedFormTest",
    ":SystemDefinedPixelMapTest",
    ":SystemDefinedRecordTest",
    ":TextTest",
    ":UdmfAsyncClientTest",
    ":UdmfClientAbnormalTest",
    ":UdmfClientHapPermissionTest",
    ":UdmfClientSaInvokeTest",
    ":UdmfClientSystemHapTest",
    ":UdmfClientTest",
    ":UnifiedDataHelperTest",
    ":UnifiedDataTest",
    ":UnifiedMetaTest",
    ":UnifiedRecordTest",
    ":UtdClientTest",
    ":VideoTest",
  ]
}
###############################################################################
